--- a/BetterControlPanel/package.json
+++ b/BetterControlPanel/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
-    "tauri": "tauri"
+    "tauri": "tauri",
+    "tauri build": "tauri build",
+    "tauri android build": "tauri android build"
   },
   "dependencies": {
     "vue": "^3.5.13",
