--- a/BetterControlPanel/src-tauri/Cargo.toml
+++ b/BetterControlPanel/src-tauri/Cargo.toml
@@ -1,8 +1,7 @@
 [package]
 name = "bettercontrolpanel"
 version = "0.1.0"
-description = "A Tauri App"
-authors = ["you"]
+authors = ["https://github.com/yuanair/"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -22,4 +21,5 @@ tauri = { version = "2", features = ["tray-icon", "unstable"] }
 tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+window-vibrancy = "0.5.2"
 
