--- a/BetterControlPanel/package.json
+++ b/BetterControlPanel/package.json
@@ -16,6 +16,7 @@
     "@tauri-apps/plugin-opener": "^2",
     "mathjax": "^3.2.2",
     "vue": "^3.5.13",
+    "vue-mathjax": "^0.1.1",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
