--- a/BetterControlPanel/src-tauri/Cargo.toml
+++ b/BetterControlPanel/src-tauri/Cargo.toml
@@ -22,4 +22,6 @@ tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 window-vibrancy = "0.5.2"
+num = { version = "0.4.3", features = ["serde"] }
+log = "0.4.26"
 
