--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,2 +1,3 @@
 [workspace]
-members = ["BetterControlPanel/src-tauri"]
+resolver = "3"
+members = ["BetterControlPanel/src-tauri", "test", "test_macro"]
