--- a/BetterControlPanel/src-tauri/Cargo.toml
+++ b/BetterControlPanel/src-tauri/Cargo.toml
@@ -23,5 +23,6 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 window-vibrancy = "0.5.2"
 num = { version = "0.4.3", features = ["serde"] }
-log = "0.4.26"
+log = "0.4.25"
+rand = "0.9.0-beta.3"
 
