--- a/BetterControlPanel/package.json
+++ b/BetterControlPanel/package.json
@@ -1,29 +1,27 @@
 {
-  "name": "bettercontrolpanel",
-  "private": true,
-  "version": "0.1.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview",
-    "tauri": "tauri",
-    "tauri build": "tauri build",
-    "tauri android build": "tauri android build"
-  },
-  "dependencies": {
-    "@tauri-apps/api": "^2",
-    "@tauri-apps/plugin-opener": "^2",
-    "mathjax": "^3.2.2",
-    "vue": "^3.5.13",
-    "vue-mathjax": "^0.1.1",
-    "vue-router": "^4.5.0"
-  },
-  "devDependencies": {
-    "@tauri-apps/cli": "^2",
-    "@vitejs/plugin-vue": "^5.2.1",
-    "typescript": "~5.6.2",
-    "vite": "^6.0.3",
-    "vue-tsc": "^2.1.10"
-  }
+	"name": "bettercontrolpanel",
+	"private": true,
+	"version": "0.1.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "vite build",
+		"preview": "vite preview",
+		"tauri": "tauri",
+		"tauri build": "tauri build",
+		"tauri android build": "tauri android build"
+	},
+	"dependencies": {
+		"@tauri-apps/api": "^2",
+		"@tauri-apps/plugin-opener": "^2",
+		"vue": "^3.5.13",
+		"vue-router": "^4.5.0"
+	},
+	"devDependencies": {
+		"@tauri-apps/cli": "^2",
+		"@vitejs/plugin-vue": "^5.2.1",
+		"typescript": "~5.6.2",
+		"vite": "^6.0.3",
+		"vue-tsc": "^2.1.10"
+	}
 }
