--- a/BetterControlPanel/Cargo.toml
+++ b/BetterControlPanel/Cargo.toml
@@ -5,8 +5,8 @@ edition = "2024"
 
 [dependencies]
 better_control_panel = { version = "0.1.0", path = "../better_control_panel" }
+clap = { version = "4.5.34", features = ["derive"] }
 eframe = "0.31.1"
 egui_extras = "0.31.1"
 env_logger = "0.11.7"
 log = "0.4.27"
-single-instance = "0.3.3"
