--- a/better_control_panel/Cargo.toml
+++ b/better_control_panel/Cargo.toml
@@ -5,6 +5,16 @@ edition = "2024"
 description = "better control panel"
 license-file = "../LICENSE"
 
+[features]
+default = []
+eframe = ["dep:eframe", "dep:egui_extras"]
+
 [dependencies]
+eframe = { version = "0.31.1", optional = true }
+egui_extras = { version = "0.31.1", optional = true }
 interprocess = "2.2.3"
+lazy_static = "1.5.0"
+log = "0.4.27"
+raw-window-handle = "0.6.2"
 single-instance = "0.3.3"
+window-vibrancy = "0.6.0"
