--- a/BetterControlPanel/Cargo.toml
+++ b/BetterControlPanel/Cargo.toml
@@ -11,4 +11,5 @@ clap = { version = "4.5.34", features = ["derive"] }
 eframe = "0.31.1"
 egui_extras = "0.31.1"
 env_logger = "0.11.7"
+image = "0.25.6"
 log = "0.4.27"
