--- a/better_control_panel/Cargo.toml
+++ b/better_control_panel/Cargo.toml
@@ -13,6 +13,7 @@ eframe = ["dep:eframe", "dep:egui_extras"]
 chrono = "0.4.40"
 eframe = { version = "0.31.1", optional = true }
 egui_extras = { version = "0.31.1", optional = true }
+image = "0.25.6"
 interprocess = "2.2.3"
 lazy_static = "1.5.0"
 log = "0.4.27"
