--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -46,5 +46,26 @@
             ],
             "console": "integratedTerminal"
         },
+        {
+            "name": "BCP-Server: 启动(Windows)",
+            "preLaunchTask": "BCP: build debug",
+            "type": "cppvsdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/target/debug/BetterControlPanel-Server.exe",
+            "args": [],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}/target/debug",
+            "environment": [
+                {
+                    "name": "RUST_LOG",
+                    "value": "info"
+                },
+                {
+                    "name": "RUST_BACKTRACE",
+                    "value": "1"
+                }
+            ],
+            "console": "integratedTerminal"
+        },
     ]
 }
