--- a/BetterControlPanel-Server/Cargo.toml
+++ b/BetterControlPanel-Server/Cargo.toml
@@ -1,8 +1,11 @@
 [package]
-name = "BetterControlPanel-Console"
+name = "BetterControlPanel-Server"
 version = "0.1.0"
 edition = "2024"
 
 [dependencies]
 better_control_panel = { version = "0.1.0", path = "../better_control_panel" }
+env_logger = "0.11.7"
+log = "0.4.27"
 clap = { version = "4.5.34", features = ["derive"] }
+rhai = "1.21.0"
