--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -67,5 +67,30 @@
             ],
             "console": "integratedTerminal"
         },
+        {
+            "name": "Test: 启动(Windows)",
+            "preLaunchTask": "BCP: build debug",
+            "type": "cppvsdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/target/debug/Test.exe",
+            "args": [
+                "add",
+                "1",
+                "2"
+            ],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}/target/debug",
+            "environment": [
+                {
+                    "name": "RUST_LOG",
+                    "value": "info"
+                },
+                {
+                    "name": "RUST_BACKTRACE",
+                    "value": "1"
+                }
+            ],
+            "console": "integratedTerminal"
+        },
     ]
 }
