--- a/Test/Cargo.toml
+++ b/Test/Cargo.toml
@@ -4,3 +4,6 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+bincode = { version = "2.0.1", features = ["serde"] }
+clap = { version = "4.5.35", features = ["derive"] }
+serde = { version = "1.0.136", features = ["derive"] }
