--- a/better_control_panel/Cargo.toml
+++ b/better_control_panel/Cargo.toml
@@ -7,6 +7,7 @@ license-file = "../LICENSE"
 repository = "https://github.com/yuanair/BetterControlPanel"
 readme = "README.md"
 keywords = ["control", "panel", "better"]
+exclude = ["rc"]
 
 [features]
 default = []
