--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "BCP: 启动(Windows)",
+            "name": "BCP: (Windows)",
             "preLaunchTask": "BCP: build debug",
             "type": "cppvsdbg",
             "request": "launch",
@@ -26,7 +26,28 @@
             "console": "integratedTerminal"
         },
         {
-            "name": "BCP-Console: 启动(Windows)",
+            "name": "BCP: (Windows) (nightly)",
+            "preLaunchTask": "BCP: build debug nightly",
+            "type": "cppvsdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/target/debug/BetterControlPanel.exe",
+            "args": [],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}/target/debug",
+            "environment": [
+                {
+                    "name": "RUST_LOG",
+                    "value": "info"
+                },
+                {
+                    "name": "RUST_BACKTRACE",
+                    "value": "1"
+                }
+            ],
+            "console": "integratedTerminal"
+        },
+        {
+            "name": "BCP-Console: (Windows)",
             "preLaunchTask": "BCP: build debug",
             "type": "cppvsdbg",
             "request": "launch",
@@ -47,7 +68,28 @@
             "console": "integratedTerminal"
         },
         {
-            "name": "BCP-Server: 启动(Windows)",
+            "name": "BCP-Console: (Windows) (nightly)",
+            "preLaunchTask": "BCP: build debug nightly",
+            "type": "cppvsdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/target/debug/BetterControlPanel-Console.exe",
+            "args": [],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}/target/debug",
+            "environment": [
+                {
+                    "name": "RUST_LOG",
+                    "value": "info"
+                },
+                {
+                    "name": "RUST_BACKTRACE",
+                    "value": "1"
+                }
+            ],
+            "console": "integratedTerminal"
+        },
+        {
+            "name": "BCP-Server: (Windows)",
             "preLaunchTask": "BCP: build debug",
             "type": "cppvsdbg",
             "request": "launch",
@@ -68,7 +110,28 @@
             "console": "integratedTerminal"
         },
         {
-            "name": "Test: 启动(Windows)",
+            "name": "BCP-Server: (Windows) (nightly)",
+            "preLaunchTask": "BCP: build debug nightly",
+            "type": "cppvsdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/target/debug/BetterControlPanel-Server.exe",
+            "args": [],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}/target/debug",
+            "environment": [
+                {
+                    "name": "RUST_LOG",
+                    "value": "info"
+                },
+                {
+                    "name": "RUST_BACKTRACE",
+                    "value": "1"
+                }
+            ],
+            "console": "integratedTerminal"
+        },
+        {
+            "name": "Test: (Windows)",
             "preLaunchTask": "BCP: build debug",
             "type": "cppvsdbg",
             "request": "launch",
