--- a/BetterControlPanel-Console/Cargo.toml
+++ b/BetterControlPanel-Console/Cargo.toml
@@ -6,3 +6,4 @@ edition = "2024"
 [dependencies]
 better_control_panel = { version = "0.1.0", path = "../better_control_panel" }
 clap = { version = "4.5.34", features = ["derive"] }
+serde = { version = "1.0.219", features = ["derive"] }
