--- a/BetterControlPanel/Cargo.toml
+++ b/BetterControlPanel/Cargo.toml
@@ -18,6 +18,7 @@ egui_extras = "0.31.1"
 env_logger = "0.11.7"
 image = "0.25.6"
 log = "0.4.27"
+serde = { version = "1.0.219", features = ["derive"] }
 
 [target.'cfg(windows)'.build-dependencies]
 winres = "0.1.12"
