--- a/better_control_panel/Cargo.toml
+++ b/better_control_panel/Cargo.toml
@@ -11,17 +11,27 @@ exclude = ["rc"]
 
 [features]
 default = []
-eframe = ["dep:eframe", "dep:egui_extras"]
+eframe = [
+    "dep:eframe",
+    "dep:egui_extras",
+    "dep:image",
+    "dep:raw-window-handle",
+    "dep:window-vibrancy",
+]
 thread_id_value = []
+rhai = ["dep:rhai"]
 
 [dependencies]
+bincode = { version = "2.0.1", features = ["serde"] }
 chrono = "0.4.40"
 eframe = { version = "0.31.1", optional = true }
 egui_extras = { version = "0.31.1", optional = true }
-image = "0.25.6"
+image = { version = "0.25.6", optional = true }
 interprocess = "2.2.3"
 lazy_static = "1.5.0"
 log = "0.4.27"
-raw-window-handle = "0.6.2"
+raw-window-handle = { version = "0.6.2", optional = true }
+rhai = { version = "1.21.0", optional = true }
+serde = { version = "1.0.219", features = ["derive"] }
 single-instance = "0.3.3"
-window-vibrancy = "0.6.0"
+window-vibrancy = { version = "0.6.0", optional = true }
