--- a/better_control_panel/Cargo.toml
+++ b/better_control_panel/Cargo.toml
@@ -23,13 +23,13 @@ rhai = ["dep:rhai"]
 
 [dependencies]
 bincode = { version = "2.0.1", features = ["serde"] }
-chrono = "0.4.40"
+chrono = { version = "0.4.40", features = ["serde"] }
 eframe = { version = "0.31.1", optional = true }
 egui_extras = { version = "0.31.1", optional = true }
 image = { version = "0.25.6", optional = true }
 interprocess = "2.2.3"
 lazy_static = "1.5.0"
-log = "0.4.27"
+log = { version = "0.4.27", features = ["serde"] }
 raw-window-handle = { version = "0.6.2", optional = true }
 rhai = { version = "1.21.0", optional = true }
 serde = { version = "1.0.219", features = ["derive"] }
